<resources>
    <string name="app_name">Lyrics Case</string>
    <string name="artwork_placeholder">Artwork placeholder</string>
    <string name="view_icon">View icon</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="titleTextView">LYRICS CASE</string>
    <string name="back_button_description">Back button</string>
    <string name="download_button_description">Download button</string>
    <string name="search_button_description">Search button</string>
    <string name="search_placeholder">Search lyrics</string>
    <string name="cancel_button_description">Cancel button</string>
    <string name="search_results">Results</string>
    <string name="no_results">No results</string>
    <string name="share_button_description">Share button</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="open_drawer">Open drawer</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="btn_login">Log in</string>
    <string name="signin_link">Create new account</string>
    <string name="login_title">Log into Lyrics Case</string>
    <string name="btn_edit_lyrics">Edit lyrics</string>
    <string name="edit_lyrics">Edit lyrics</string>
    <string name="top_songs">Top songs</string>
    <string name="header_username">Username</string>
    <string name="header_role">Role name</string>
    <string name="header_brand_logo">Brand logo</string>
    <string name="user_image_placeholder">User image placeholder</string>
    <string name="tv_username">Username</string>
    <string name="tv_role">Role</string>
    <string name="tv_user_points">points</string>
</resources>