<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:gravity="bottom">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_brand_logo_foreground"
            android:scaleType="centerCrop"
            android:contentDescription="@string/header_brand_logo"
            />

        <View
            android:id="@+id/shadow_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_username"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/tv_user_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_role"
                android:textSize="18sp"
                android:textColor="@color/white"
                />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>