<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:id="@+id/iv_user_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/user_image_placeholder"
                android:scaleType="centerCrop"
                android:contentDescription="@string/user_image_placeholder"
                />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_username"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_user_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_user_points"
                android:textSize="16sp"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
