<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <!-- Contenido Principal de la Actividad -->
    <LinearLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

            <!-- Botón para abrir la barra de navegación -->
            <ImageButton
                android:id="@+id/btnOpenDrawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/open_drawer"
                android:src="@drawable/baseline_menu_24"
                android:layout_gravity="start"
                />

            <!-- TextView centered on the Toolbar -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleTextView"
                android:textStyle="bold"
                android:textSize="26sp"
                android:layout_gravity="center"
                style="@style/toolbarTitle"
                />

            <!-- Botón para abrir la ventana de búsqueda -->
            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/search_button_description"
                android:src="@drawable/baseline_search_24"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                />
        </androidx.appcompat.widget.Toolbar>

        <!-- SwipeRefreshLayout con RecyclerView -->
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTopSongs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/top_songs"
                        android:textSize="40sp"
                        android:layout_marginVertical="80dp"
                        android:layout_gravity="center_horizontal"
                        style="@style/textDayNight"
                        />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvSongs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <!-- Barra de Navegación -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        />

</androidx.drawerlayout.widget.DrawerLayout>