<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/songDetailToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button_description"
                android:src="@drawable/ic_back_arrow"
                android:layout_marginEnd="18dp"
                />

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:maxLines="2"
                android:ellipsize="end"
                style="@style/textDayNight"
                />

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/share_button_description"
                android:src="@drawable/baseline_share_24"
                android:layout_marginHorizontal="18dp"
                />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songDetailToolbar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <ImageView
                        android:id="@+id/iv_artwork"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:contentDescription="@string/artwork_placeholder"
                        android:scaleType="centerCrop"
                        android:src="@drawable/artwork_placeholder"
                        />

                    <View
                        android:id="@+id/shadow_overlay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#99000000"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp"
                        android:paddingBottom="10dp">

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="34sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_marginBottom="4dp"
                            android:maxLines="2"
                            android:ellipsize="end"
                            />

                        <TextView
                            android:id="@+id/tv_artists"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:layout_marginBottom="8dp"
                            android:maxLines="2"
                            android:ellipsize="end"
                            />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginEnd="5dp"
                                android:contentDescription="@string/view_icon"
                                android:src="@drawable/view_icon"
                                />

                            <TextView
                                android:id="@+id/tv_views"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:textColor="#808080"
                                />
                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>

                <Button
                    android:id="@+id/btn_edit_lyrics"
                    style="@style/btnPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/frameLayout"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="0dp"
                    android:text="@string/btn_edit_lyrics"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_lyrics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_edit_lyrics"
                    android:padding="16dp"
                    android:textSize="18sp"
                    android:textIsSelectable="true"
                    android:textColorHighlight="#56337CFF"
                    style="@style/textDayNight"
                    />
            </RelativeLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>